--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ node_modules
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
+# Docker
+docker-data/
+
 # Personal Files
 notes.md
 /.vscode
+.vercel
+.env*.local
