--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test": "vitest",
+    "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "prisma:validate": "npx prisma format && npx prisma validate",
+    "format": "prettier --write . && npx prisma format",
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/node": "^20.10.5",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
@@ -26,13 +31,23 @@
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.6",
+    "ts-node": "^10.9.2",
     "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5.3.3",
     "vite": "^5.0.3",
     "vitest": "^1.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@neondatabase/serverless": "^0.6.1",
+    "@prisma/adapter-neon": "^5.7.1",
+    "@prisma/client": "^5.7.1",
+    "@sveltejs/adapter-vercel": "^4.0.3",
+    "dotenv": "^16.3.1",
+    "ws": "^8.16.0"
+  }
 }
