--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@prisma/adapter-neon": "^5.7.1",
     "@prisma/client": "^5.7.1",
     "@sveltejs/adapter-vercel": "^4.0.3",
+    "@vercel/analytics": "^1.1.1",
     "dotenv": "^16.3.1",
     "ws": "^8.16.0"
   }
