--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@prisma/client": "^5.7.1",
     "@sveltejs/adapter-vercel": "^4.0.3",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "dotenv": "^16.3.1",
     "ws": "^8.16.0"
   }
