--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -1,6 +1,8 @@
 name: Deploy Preview
 
-on: [pull_request]
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   Test:
@@ -29,7 +31,10 @@ jobs:
 
   deploy_preview:
     needs: [Test]
-    permissions: write-all
+    permissions:
+      contents: read
+      statuses: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -60,22 +65,62 @@ jobs:
           npx prisma generate
           npx prisma migrate deploy
 
+       - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
+
+      - name: Hash branch name
+        uses: pplanel/hash-calculator-action@v1.3.1
+        id: hash_branch
+        with:
+          input: ${{ steps.extract_branch.outputs.branch }}
+          method: MD5
+      
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: cache-npm
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: npm-
+
+      - name: Install dependencies
+        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        run: npm ci --ignore-scripts
 
       - name: Pull Vercel Environment Information
         run:
           vercel pull --yes --environment=preview --token=${{
           secrets.VERCEL_TOKEN }}
 
-      - name: Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        id: vercel
+        env:
+          META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
+        run: |
+          vercel --version
+          vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
+          vercel build --token=$VERCEL_TOKEN
+          vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }}
 
-      - name: Deploy Preview to Vercel
-        id: deploy
-        run:
-          echo preview_url=$(vercel deploy --prebuilt --token=${{
-          secrets.VERCEL_TOKEN }}) >> $GITHUB_OUTPUT
+          vercel ls --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }} &> vercel-output
+          url=$(cat vercel-output | grep http | awk '{print $2}')
+          echo "New preview URL: $url"
+          echo "META_TAG=$META_TAG"
+          echo "preview_url=$url" >> "$GITHUB_OUTPUT"
+      
+      # - name: Build Project Artifacts
+      #   run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
+      # - name: Deploy Preview to Vercel
+      #   id: deploy
+      #   run:
+      #     echo preview_url=$(vercel deploy --prebuilt --token=${{
+      #     secrets.VERCEL_TOKEN }}) >> $GITHUB_OUTPUT
 
       # From: https://github.com/peter-evans/create-or-update-comment
       - name: Find Comment
