--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   Test:
     runs-on: ubuntu-latest
+    environment: Preview
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
@@ -36,6 +37,7 @@ jobs:
       statuses: write
       pull-requests: write
     runs-on: ubuntu-latest
+    environment: Preview
     env:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -70,7 +72,10 @@ jobs:
           npx prisma migrate deploy
 
       - name: Run Prisma Seed
+        env:
+          EXEC_ENV: ${{ vars.EXEC_ENV }}
         run: |
+          echo "Environment: $EXEC_ENV"
           npx prisma db seed
 
       - name: Extract branch name
