--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -2,36 +2,15 @@ name: Deploy Preview
 
 on:
   pull_request:
+    branches: develop
     types: [opened, synchronize, reopened]
+  workflow_run:
+    workflows: ["Run Tests"]
+    types:
+      - completed
 
 jobs:
-  Test:
-    runs-on: ubuntu-latest
-    environment: Preview
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build, Test, and Lint
-        run: |
-          npm run build
-          npm run test
-          npm run lint
-          npm run prisma:validate
-
   deploy_preview:
-    needs: [Test]
     permissions:
       contents: read
       statuses: write
