--- a/.github/workflows/test-production.yml
+++ b/.github/workflows/test-production.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Tests (production)
 
 on:
   pull_request:
@@ -7,6 +7,7 @@ on:
 jobs:
   Test:
     runs-on: ubuntu-latest
+    environment: Production
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
