trying testing on develop branch instead of preview

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -4,102 +4,13 @@ on:
   pull_request:
     branches: develop
     types: [opened, synchronize, reopened]
+  workflow_run:
+    workflows: ["Run Tests (develop)"]
+    types:
+      - completed
 
 jobs:
-  create_neon_branch:
-    runs-on: ubuntu-latest
-    environment: Preview
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Get PR sha
-        id: get_pull_request_sha
-        run: |
-          pull_request_sha=$(jq --raw-output .pull_request.base.sha "$GITHUB_EVENT_PATH" | cut -c1-8)
-          echo "pull_request_sha=${pull_request_sha}" >> $GITHUB_OUTPUT
-          echo $pull_request_sha
-
-      - name: Neon Database Create Branch Action
-        uses: neondatabase/create-branch-action@v3
-        id: create_branch
-        with:
-          project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch_name: ${{steps.get_pull_request_sha.outputs.pull_request_sha}}
-          api_key: ${{ secrets.NEON_API_KEY }}
-          username: ${{ secrets.PG_USERNAME }}
-          password: ${{ secrets.PG_PASSWORD }}
-
-  Test:
-    needs: [create_neon_branch]
-    runs-on: ubuntu-latest
-    environment: Preview
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: |
-          npm run build
-
-      - name: Test
-        run: |
-          npm run test
-
-      - name: Lint
-        run: |
-          npm run lint
-          npm run prisma:validate
-
-  handle_failure:
-    needs: [Test]
-    if: failure()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Get last commit SHA
-        id: get_sha
-        run: |
-          echo sha="${{ github.event.before }}" | cut -c1-8 >> $GITHUB_OUTPUT
-
-      - name: Search branch by name
-        id: get_branch_id
-        # list all branches and filter by name
-        run: |
-          branch_id=$(curl --silent \
-            "https://console.neon.tech/api/v2/projects/${{ secrets.NEON_PROJECT_ID }}/branches" \
-            --header "Accept: application/json" \
-            --header "Content-Type: application/json" \
-            --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
-            | jq -r .branches \
-            | jq -c '.[] | select(.name | contains("'${{ steps.get_sha.outputs.sha }}'")) .id' \
-            | jq -r \
-            ) \
-
-          echo "branch_id=${branch_id}" >> $GITHUB_OUTPUT
-
-      - name: Delete Neon Branch
-        uses: neondatabase/delete-branch-action@v2
-        with:
-          project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch_id: ${{ steps.get_branch_id.outputs.branch_id }}
-          api_key: ${{ secrets.NEON_API_KEY }}
-
   deploy_preview:
-    needs: [Test]
     permissions:
       contents: read
       statuses: write
