--- a/.github/workflows/test-develop.yml
+++ b/.github/workflows/test-develop.yml
@@ -30,6 +30,8 @@ jobs:
           source .vercel/.env.DIRECT_DATABASE_URL 
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
           echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
+          echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
+          echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: npm ci
