modified local cache file path

--- a/.github/workflows/test-develop.yml
+++ b/.github/workflows/test-develop.yml
@@ -25,8 +25,8 @@ jobs:
         id: vercel_pull
         run: |
           vercel pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }} 
-          source .vercel/.env.DATABASE_URL
-          source .vercel/.env.DIRECT_DATABASE_URL 
+          source .vercel/.env.$target.local.DATABASE_URL
+          source .vercel/.env.$target.local.DIRECT_DATABASE_URL 
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
           echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
