for testing purposes

--- a/.github/workflows/test-develop.yml
+++ b/.github/workflows/test-develop.yml
@@ -26,10 +26,10 @@ jobs:
         run: |
           vercel link --yes --token=${{ secrets.VERCEL_TOKEN }} 
           vercel env pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }} 
-          echo "DATABASE_URL=$DATABASE_URL"
-          echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL"
-          echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
-          echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
+          # echo "DATABASE_URL=$DATABASE_URL"
+          # echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL"
+          # echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
+          # echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: npm ci
