--- a/.github/workflows/test-develop.yml
+++ b/.github/workflows/test-develop.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           vercel link --yes --token=${{ secrets.VERCEL_TOKEN }} 
           vercel env pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }} >> .env
-          source .env
+          source .env.local
           echo "DATABASE_URL=$DATABASE_URL"
           echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL"
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
