working vercel pull

--- a/.github/workflows/test-develop.yml
+++ b/.github/workflows/test-develop.yml
@@ -25,10 +25,8 @@ jobs:
         id: vercel_pull
         run: |
           vercel link --yes --token=${{ secrets.VERCEL_TOKEN }} 
-          vercel env pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }} >> .env
+          vercel env pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }}
           source .env.local
-          echo "DATABASE_URL=$DATABASE_URL"
-          echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL"
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
           echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
 
