--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -10,6 +10,8 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     environment: Develop
+    env:
+      DEVELOP_DOMAIN: soen-341-develop.vercel.app
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -42,6 +44,10 @@ jobs:
           branch_id: ${{ steps.get_branch_id.outputs.branch_id }}
           api_key: ${{ secrets.NEON_API_KEY }}
 
+      - name: Run Prisma Migrate
+        run: |
+          npx prisma migrate deploy
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
@@ -54,6 +60,10 @@ jobs:
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
           echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
 
-      - name: Run Prisma Migrate
+      - name: Build Project Artifacts
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Deploy Project Artifacts to Vercel
         run: |
-          npx prisma migrate deploy
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+          vercel alias --token=${{ secrets.VERCEL_TOKEN }} set "$url" $DEVELOP_DOMAIN
