--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -39,11 +39,14 @@ jobs:
 
       - name: Set Database URL in .environment
         run: |
-          echo DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler}}/neondb?sslmode=require&pgbouncer=true >> $GITHUB_ENV 
-          echo DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url}}/neondb?sslmode=require >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler}}/neondb?sslmode=require&pgbouncer=true" >> $GITHUB_ENV 
+          echo "DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url}}/neondb?sslmode=require" >> $GITHUB_ENV
 
       - name: Run Prisma Migrate
         run: |
+          # touch .env
+          # echo DATABASE_URL="${{ secrets.DATABASE_URL}}" >> .env
+          # echo DIRECT_DATABASE_URL="${{ secrets.DIRECT_DATABASE_URL}}" >> .env  
           npx prisma generate
           npx prisma migrate deploy
 
