--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -38,10 +38,12 @@ jobs:
           username: ${{ secrets.PG_USERNAME }}
           password: ${{ secrets.PG_PASSWORD }}
 
-      - name: Set Database URL in .environment
+      - name: Set Database URL in .environment and output
         run: |
           echo "DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler}}/neondb?sslmode=require&pgbouncer=true" >> $GITHUB_ENV 
           echo "DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url}}/neondb?sslmode=require" >> $GITHUB_ENV
+          echo "preview_db_url: ${{ steps.create_branch.outputs.db_url_with_pooler }}" >> $GITHUB_OUTPUT
+          echo "preview_db_url_direct: ${{ steps.create_branch.outputs.db_url }}" >> $GITHUB_OUTPUT
 
       - name: Run Prisma Migrate
         run: |
@@ -131,9 +133,6 @@ jobs:
             Vercel Preview URL :rocket: : ${{ steps.vercel.outputs.preview_url }}
             Neon branch :elephant: : https://console.neon.tech/app/projects/${{ secrets.NEON_PROJECT_ID }}/branches/${{ steps.create_branch.outputs.branch_id }}
           edit-mode: replace
-    outputs:
-      preview_db_url: ${{ steps.create_branch.outputs.db_url_with_pooler }}
-      preview_db_url_direct: ${{ steps.create_branch.outputs.db_url }}
 
   test_preview:
     runs-on: ubuntu-latest
