--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -10,15 +10,15 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     environment: Production
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Run Prisma Migrate
         run: |
-          touch .env
-          echo DATABASE_URL="${{ secrets.DATABASE_URL}}" >> .env
-          echo DIRECT_DATABASE_URL="${{ secrets.DIRECT_DATABASE_URL}}" >> .env
           npx prisma migrate deploy
 
       - name: Install Vercel CLI
