--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -10,8 +10,6 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     environment: Develop
-    env:
-      DEVELOP_DOMAIN: soen-341-develop.vercel.app
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -54,11 +52,11 @@ jobs:
       - name: Pull Vercel Environment Information
         id: vercel_pull
         run: |
-          vercel link --yes --token=${{ secrets.VERCEL_TOKEN }} 
+          vercel link --yes --token=${{ secrets.VERCEL_TOKEN }}
           vercel env pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }}
-          source .env.local
-          echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV 
-          echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
+          # source .env.local
+          # echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV
+          # echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
 
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
@@ -66,4 +64,4 @@ jobs:
       - name: Deploy Project Artifacts to Vercel
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
-          vercel alias --token=${{ secrets.VERCEL_TOKEN }} set "$url" $DEVELOP_DOMAIN
+          vercel alias --token=${{ secrets.VERCEL_TOKEN }} set "$url" ${{vars.DEVELOP_DOMAIN}}
