--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -5,33 +5,7 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  Test:
-    runs-on: ubuntu-latest
-    environment: Preview
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build, Test, and Lint
-        run: |
-          npm run build
-          npm run test
-          npm run lint
-          npm run prisma:validate
-
   deploy_preview:
-    needs: [Test]
     permissions:
       contents: read
       statuses: write
@@ -42,9 +16,10 @@ jobs:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      EXEC_ENV: ${{ vars.EXEC_ENV }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Get PR sha
         id: get_pull_request_sha
@@ -63,17 +38,17 @@ jobs:
           username: ${{ secrets.PG_USERNAME }}
           password: ${{ secrets.PG_PASSWORD }}
 
+      - name: Set Database URL in .environment
+        run: |
+          echo "DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler}}/neondb?sslmode=require&pgbouncer=true" >> $GITHUB_ENV 
+          echo "DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url}}/neondb?sslmode=require" >> $GITHUB_ENV
+
       - name: Run Prisma Migrate
         run: |
-          touch .env
-          echo DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler}}/neondb >> .env
-          echo DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url}}/neondb >> .env
           npx prisma generate
           npx prisma migrate deploy
 
       - name: Run Prisma Seed
-        env:
-          EXEC_ENV: ${{ vars.EXEC_ENV }}
         run: |
           npx prisma db seed
 
@@ -91,8 +66,10 @@ jobs:
           input: ${{ steps.extract_branch.outputs.branch }}
           method: MD5
 
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
 
       - name: Cache dependencies
         uses: actions/cache@v2
@@ -105,6 +82,23 @@ jobs:
       - name: Install dependencies
         if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         run: npm ci --ignore-scripts
+
+      - name: Build
+        run: |
+          npm run build
+
+      - name: Lint
+        run: |
+          echo "DATABASE_URL=$DATABASE_URL, DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL"  
+          npm run lint
+          npm run prisma:validate
+
+      - name: Test
+        run: |
+          npm run test
+
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Information
         run:
