--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -10,36 +10,15 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     environment: Production
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get last commit SHA
-        id: get_sha
-        run: |
-          echo sha="${{ github.event.before }}" | cut -c1-8 >> $GITHUB_OUTPUT
-
-      - name: Search branch by name
-        id: get_branch_id
-        # list all branches and filter by name
-        run: |
-          branch_id=$(curl --silent \
-            "https://console.neon.tech/api/v2/projects/${{ secrets.NEON_PROJECT_ID }}/branches" \
-            --header "Accept: application/json" \
-            --header "Content-Type: application/json" \
-            --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
-            | jq -r .branches \
-            | jq -c '.[] | select(.name | contains("'${{ steps.get_sha.outputs.sha }}'")) .id' \
-            | jq -r \
-            ) \
-            
-          echo "branch_id=${branch_id}" >> $GITHUB_OUTPUT
-
       - name: Run Prisma Migrate
         run: |
-          touch .env
-          echo DATABASE_URL="${{ secrets.DATABASE_URL}}" >> .env
-          echo DIRECT_DATABASE_URL="${{ secrets.DIRECT_DATABASE_URL}}" >> .env
           npx prisma migrate deploy
 
       - name: Install Vercel CLI
@@ -55,10 +34,3 @@ jobs:
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Delete Neon Branch
-        uses: neondatabase/delete-branch-action@v2
-        with:
-          project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch_id: ${{ steps.get_branch_id.outputs.branch_id }}
-          api_key: ${{ secrets.NEON_API_KEY }}
