--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -56,11 +56,7 @@ jobs:
 
       - name: Pull Vercel Environment Information
         run: |
-          vercel link --yes --token=${{ secrets.VERCEL_TOKEN }}
-          vercel env pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }}
-          source .env.local
-          # echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_ENV
-          # echo "DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL" >> $GITHUB_ENV
+          vercel pull --yes --environment=preview --git-branch=develop --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
