feat(init): initialized skeleton ui

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "node": "18.x"
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "^2.7.0",
+    "@skeletonlabs/tw-plugin": "^0.3.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
