--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.3",
+    "vite-plugin-tailwind-purgecss": "^0.2.0",
     "vitest": "^1.0.0"
   },
   "type": "module",
