html brackets on the same line

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
   "quoteProps": "as-needed",
   "trailingComma": "all",
   "bracketSpacing": true,
-  "bracketSameLine": false,
+  "bracketSameLine": true,
   "arrowParens": "always",
   "proseWrap": "always",
 
