test: fix workflow migration

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -45,7 +45,11 @@ jobs:
 
       - name: Run Prisma Migrate
         run: |
-          npx prisma generate
+          cat .env
+          touch .env
+          echo "DATABASE_URL=${{env.DATABASE_URL}}" >> .env
+          echo "DIRECT_DATABASE_URL=${{env.DIRECT_DATABASE_URL}}" >> .env
+          cat .env
           npx prisma migrate deploy
 
       - name: Run Prisma Seed
