feature/sprint1deliverables (#142)
* Feature/skeleton UI init (#67)

* feat(init): initialized skeleton ui

* removed speed insight

it was erroring out and isn't worth fixing for now

* feat(init): setup custom theme

Also added 2 default themes

* no longer using cssnano

* feat: setup purgeCss to remove unused styles

* html brackets on the same line

* feat(init): created basic project layout with skeletonUI

resolves #27

* feat: added modals, toasts, and dark mode switch

* feat: setup modal registry for custom modal components

* feat: added transmission icon

* Create draft of database schema

Created a draft of the database schema for discussion on Friday.

Have not yet created a migration as changes yet to be discussed. There are some comments for discussion that should be removed before merging.

* Update README.md

* added husky install to README

* Add bcrypt to package.json

This commit adds the ‘bcrypt’ dependency to package.json. This dependency is required to generate and validate password hashes, which appear in the forthcoming seed data.

* Refactor database schema from first draftm

This commit makes the following refactors from the first draft of the schema:

- 'photo_url' is now 'photoUrl' - a bit of pythonism snuck in
- branches have a 'timezone' property which is an IANA timezone.
- 'equipment' is now 'accessory'
- lots of whitespace changes due to prisma format's blast radius

* Create seed data for initial schema

This commit adds some more expansive seed data for the schema defined in this branch.

Per @NathanGrenier I got rid of the original migration - not sure if it'll be neccesary to drop the database at Vercel so that it works.

* Revert "Create seed data for initial schema"

This reverts commit 0533ca7b9e0d36dce9e35f1fe010dbb975ba627d.

* refactor: re-added seed data

* fix: removed redundant migration and added basic schema migration

* fix: added secret corresponding 

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "node": "18.x"
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "^2.7.0",
+    "@skeletonlabs/tw-plugin": "^0.3.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -53,6 +55,7 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.3",
+    "vite-plugin-tailwind-purgecss": "^0.2.0",
     "vitest": "^1.0.0"
   },
   "type": "module",
@@ -63,6 +66,7 @@
     "@sveltejs/adapter-vercel": "^4.0.3",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
+    "bcrypt": "^5.1.1",
     "cssnano": "^6.0.3",
     "dotenv": "^16.3.1",
     "ws": "^8.16.0"
