--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,10 +4,16 @@ on:
   workflow_dispatch:
     branches:
       - main
-    # inputs: # Could be used to manually specify the release tag
-    #   tag:
-    #     description: "The tag to release (Format: v*.*.*)"
-    #     required: true
+    inputs: # Could be used to manually specify the release tag
+      sprint_number:
+        description: "The current sprint number"
+        required: true
+        type: choice
+        options:
+          - "Sprint 1"
+          - "Sprint 2"
+          - "Sprint 3"
+          - "Sprint 4"
 
 jobs:
   new-release:
@@ -18,15 +24,17 @@ jobs:
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
         with:
-          github-token: ${{secrets.github_token}}
+          github-token: ${{secrets.GITHUB_TOKEN}}
           output-file: "false"
 
       - name: Create Release # This action will create the actual release
         uses: actions/create-release@v1
         if: ${{steps.changelog.outputs.skipped == 'false'}}
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
-          body: ${{ steps.changelog.outputs.clean_changelog }}
+          body: |
+            # Release for **${{inputs.sprint_number}}**
+            ${{ steps.changelog.outputs.clean_changelog }}
