--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -64,11 +65,13 @@
     "@prisma/adapter-neon": "^5.7.1",
     "@prisma/client": "^5.7.1",
     "@sveltejs/adapter-vercel": "^4.0.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
     "bcrypt": "^5.1.1",
     "cssnano": "^6.0.3",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.16.0"
   },
   "config": {
