--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
