--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -91,7 +91,7 @@ jobs:
         run: |
           BRANCH_NAME="${{ github.head_ref }}"
           SANITIZED_BRANCH_NAME="${BRANCH_NAME//[^a-zA-Z0-9]/-}"
-          echo "SANITIZED_BRANCH_NAME=$SANITIZED_BRANCH_NAME" >> $GITHUB_ENV
+          echo "SANITIZED_BRANCH_NAME=$SANITIZED_BRANCH_NAME" >> $GITHUB_OUTPUT
 
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
