--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "cssnano": "^6.0.3",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "zod": "^3.22.4"
   },
   "config": {
     "commitizen": {
