--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -56,6 +56,12 @@ jobs:
           echo "DATABASE_URL=${{ steps.create_branch.outputs.db_url_with_pooler}}/${{secrets.DATABASE_NAME}}?sslmode=require&pgbouncer=true" >> $GITHUB_ENV 
           echo "DIRECT_DATABASE_URL=${{ steps.create_branch.outputs.db_url}}/${{secrets.DATABASE_NAME}}?sslmode=require" >> $GITHUB_ENV
 
+      # BUG: On May 1st 2024, Vercel will no longer use secrets. See link for more info: https://vercel.com/changelog/legacy-environment-variable-secrets-are-being-sunset
+      - name: Set Vercel Environment Variables
+        run: |
+          vercel secrets list
+          vercel secrets add DATABASE_URL $DATABASE_URL --token=$VERCEL_TOKEN
+
       - name: Run Prisma Migrate
         run: |
           npx prisma migrate deploy
