ci: added "set vercel environment vars" step to preview deployment workflow
fix: added vercel token to command

ci: updated vercel secrets commands to use env commands instead

ci: fixed env variables

ci: testing changes

ci: removed vercel login

ci: added token flag to vercel commands

ci: removed secret from vercel env add

ci: using premade github action to set vercel env

test

testing vercel env add

testing clean branch name

ci: fixed github branch value and added debug step

ci: ignore failure when vercel env varaible already exists

modified debug print statment

removed debug and added name flag to vercel deploy

added vercel linking

testing nathangrenier as scope

tes scope as org id

removed vercel command

testing env flag in deploy command

testing env flag in deploy

ci: commented out redundant steps and added env flags to the vercel deploy command

Squashed testing commits.

--- a/.github/workflows/remove-deploy-preview.yml
+++ b/.github/workflows/remove-deploy-preview.yml
@@ -35,6 +35,10 @@ jobs:
           input: ${{ steps.extract_branch.outputs.branch }}
           method: MD5
 
+      # - name: Delete Vercel Preview Branch env Variables
+      #   run: |
+      #     curl "https://api.vercel.com/v1/projects/$VERCEL_PROJECT_ID/env
+
       - name: Call the delete-deployment-preview.sh script
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}
