--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -59,7 +59,7 @@ jobs:
       # BUG: On May 1st 2024, Vercel will no longer use secrets. See link for more info: https://vercel.com/changelog/legacy-environment-variable-secrets-are-being-sunset
       - name: Set Vercel Environment Variables
         run: |
-          vercel secrets list
+          vercel secrets list --token=$VERCEL_TOKEN
           vercel secrets add DATABASE_URL $DATABASE_URL --token=$VERCEL_TOKEN
 
       - name: Run Prisma Migrate
